fixing text not showing up on button

--- a/styles.css
+++ b/styles.css
@@ -229,7 +229,7 @@ body {
   .ai, .human {
     font-size: .8rem;
     width: 120px;
-    height: 25px;
+    text-wrap: wrap;
   }
 
   .selector {
